--- a/csc372-hw/Hw2/html/index.html
+++ b/csc372-hw/Hw2/html/index.html
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="Explore.html">Explore</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                        <a class="nav-link" href="mealplan.html">Meal Plan</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="article.html">Article</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
