--- a/csc372-hw/Hw2/html/Explore.html
+++ b/csc372-hw/Hw2/html/Explore.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="mealplan.html">Meal Plan</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="article.html">Article</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
