Homework HM page updated

--- a/csc372-hw/index.html
+++ b/csc372-hw/index.html
@@ -15,8 +15,8 @@
             <li class="dropdown-container">
                 <a href="#" class="dropdown-toggle">All my HWs</a>
                 <ul class="dropdown">
-                    <li><a href="PieHw/pie.html">Pie Page!</a></li>
-                    <li><a href="#">Assignment 2</a></li>
+                    <li><a href="Hw1/pie.html">Pie Page!</a></li>
+                    <li><a href="Hw2/html/index.html">Dine On UNCG Campu</a></li>
                     <li><a href="#">Assignment 3</a></li>
                     <li><a href="#">Assignment 4</a></li>
                     <li><a href="#">Assignment 5</a></li>
