--- a/csc372-hw/Hw2/html/about.html
+++ b/csc372-hw/Hw2/html/about.html
@@ -28,8 +28,6 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
    </head>
-
-   <!--Body starts here! --- add the content -->
    <body>
       <div class="header_section header_bg">
          <div class="container-fluid">
@@ -43,17 +41,17 @@
                      <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
-                     <li class="nav-item active">
+                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                      </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="coffees.html">Coffees</a>
+                     <li class="nav-item active">
+                        <a class="nav-link" href="Explore.html">Explore</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
+                        <a class="nav-link" href="mealplan.html">Meal Plan</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="article.html">Article</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -72,8 +70,19 @@
          </div>
       </div>
       <!-- header section end -->
-     
 
+    
+
+               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <i class="fa fa-arrow-left"></i>
+               </a>
+               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+               <i class="fa fa-arrow-right"></i>
+               </a>
+            </div>
+         </div>
+      </div>
+      <!-- coffee section end -->
 
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
