--- a/csc372-hw/Hw2/html/article.html
+++ b/csc372-hw/Hw2/html/article.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
    <head>
-
     <style>
         /* ======================= ARTICLE PAGE STYLING ======================= */
         body {
@@ -197,12 +196,16 @@
         }
     </script>
 
-
-
-
-
-    
-
+               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <i class="fa fa-arrow-left"></i>
+               </a>
+               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+               <i class="fa fa-arrow-right"></i>
+               </a>
+            </div>
+         </div>
+      </div>
+      <!-- coffee section end -->
 
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
