errors repushed again

--- a/csc372-hw/Hw2/html/index.html
+++ b/csc372-hw/Hw2/html/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<!--
+  Name: Shreya Jayas
+  Date: 2-18-2025
+  CSC 372-01
+
+  This is the index.html page for my UNCG Food Guide project. It serves as the main landing page, 
+  providing navigation to key sections such as "Explore," "Meal Plan," and "Articles." 
+  Users can browse through various categories of restaurants, view details about food spots near UNCG, 
+  and interact with menu options.
+
+  Features included:
+  - Navigation bar with links to all sections of the site.
+  - Introduction to the purpose of the website.
+  - Easy access to explore restaurants and food options near UNCG.
+  - Links to "Meal Plan" for users to create and calculate their meal costs.
+  - "Articles" section featuring food promotions and insights.
+  
+  The index.html page is designed to be user-friendly, responsive, and visually appealing to help 
+  users quickly find the best food options around campus.
+-->  
+
 <html>
    <head>
       <!-- basic -->
